--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
-<h1>Sobre a Barbearia Alura</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>site criativo</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
+<header>
+<h1>vai ser uma imagem aqui</h1>
+<ul>
+<li>barcelona</li>
+<li>Time Jogadores</li>
+</ul>
+</header>
 
-Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos clientes".
 
-Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
+
+
+<body>
+ 
+  
+</body>
+</html>
